--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,8 @@ li {
 }
 
 .header {
-  background-color: #d6995c;
+  /*background-color: #d6995c;*/
+  background: linear-gradient(-135deg, #000000, #0f9b0f);
   color: #fff;
   height: 90px;
 }
