--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,6 +62,13 @@ li {
   margin-top: 30px;
 }
 
+
+.contents-item img{
+  width: 350px;
+  height: 252px;
+  transition: transform 4s $easeInOutSine, opacity 0.4s ease-in;
+}
+
 .contact-form {
   padding-top: 100px;
 }
